--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "flowbite": "^3.1.1",
+    "flowbite-react": "^0.10.2",
     "next": "15.1.6",
     "pagedone": "^1.2.2",
+    "reach": "^1.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
