--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.11.1",
     "flowbite": "^3.1.1",
     "flowbite-react": "^0.10.2",
     "next": "15.1.6",
