--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.11.1",
     "flowbite": "^3.1.1",
     "flowbite-react": "^0.10.2",
+    "mongoose": "^8.10.0",
     "next": "15.1.6",
     "pagedone": "^1.2.2",
     "reach": "^1.0.1",
