--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@clerk/nextjs": "^6.11.1",
     "flowbite": "^3.1.1",
     "flowbite-react": "^0.10.2",
+    "lucide-react": "^0.475.0",
+    "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
     "next": "15.1.6",
     "pagedone": "^1.2.2",
     "reach": "^1.0.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "svix": "^1.59.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
